--- a/output/emails/email_pchauha5_at_calstatela_edu.html
+++ b/output/emails/email_pchauha5_at_calstatela_edu.html
@@ -65,22 +65,22 @@
         
         <div style="margin: 20px 0; padding: 20px; background-color: #f5f5f5; border-left: 4px solid #003262; border-radius: 5px;">
             <h2 style="color: #003262; margin: 0 0 15px 0; font-size: 18px;">
-                calstatela.edu_hhs
+                calstatela.edu/osd
             </h2>
             <div style="font-size: 16px; line-height: 1.8;">
-                <p style="margin: 5px 0;"><strong>Total PDFs Found:</strong> 700</p>
-                <p style="margin: 5px 0;"><strong>Unique PDFs:</strong> 130</p>
+                <p style="margin: 5px 0;"><strong>Total PDFs Found:</strong> 61</p>
+                <p style="margin: 5px 0;"><strong>Unique PDFs:</strong> 4</p>
                 <p style="margin: 5px 0;">
                     <span style="display: inline-block; width: 20px; height: 20px; background-color: #8B0000; margin-right: 8px; vertical-align: middle;"></span>
-                    <strong>High Priority:</strong> 68 PDFs
+                    <strong>High Priority:</strong> 0 PDFs
                 </p>
                 <p style="margin: 5px 0;">
                     <span style="display: inline-block; width: 20px; height: 20px; background-color: #FF8C00; margin-right: 8px; vertical-align: middle;"></span>
-                    <strong>Medium Priority:</strong> 191 PDFs
+                    <strong>Medium Priority:</strong> 0 PDFs
                 </p>
                 <p style="margin: 5px 0;">
                     <span style="display: inline-block; width: 20px; height: 20px; background-color: #006400; margin-right: 8px; vertical-align: middle;"></span>
-                    <strong>Low Priority:</strong> 441 PDFs
+                    <strong>Low Priority:</strong> 61 PDFs
                 </p>
             </div>
         </div>
